--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "src/mlp"]
 	path = src/mlp
-	url = git@github.com:MusicallyEmbodiedML/memlp.git
+	url = https://github.com/MusicallyEmbodiedML/memlp.git
+
